<resources>
    <string name="app_name">World Charity</string>
    <string name="welcome_message">Welcome to <b>World Charity</b></string>
    <string name="welcome_text">Make a positive impact in our world, start your journey now</string>
    <string name="role_title">Start your journey now</string>
    <string name="role_text">Make a positive impact as an association, or as a simple kind person</string>
    <string name="donation_text">Your donation has been submitted. You will get the confirmation as soon as possible.</string>


    <!-- shared prefs -->

    <string name="prefs">user</string>
    <string name="pref_notif">user</string>
    <string name="user_id">user_id</string>
    <string name="token">token</string>
    <string name="user_name">user_name</string>
    <string name="user_lastname">user_lastname</string>
    <string name="user_role">user_role</string>
    <string name="user_photo">user_photo</string>
    <string name="isconnected">isconnectedw</string>


    <!-- menus -->
    <string name="events">Events</string>
    <string name="charities">Charities</string>
    <string name="causes">Causes</string>
    <string name="myevents">My Events</string>
    <string name="collab">Donations</string>
    <string name="fav">My Favorites</string>
    <string name="settings">My Profile</string>

    <!-- roles -->
    <string name="user">user</string>
    <string name="charity">charity</string>

    <!-- facebook & google -->
    <string name="facebook_app_id">570364166708868</string>
    <string name="fb_login_protocol_scheme">fb570364166708868</string>

    <!-- pager  -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">World Charity</string>
    <string name="slide_1_desc">The easiest way to contribute to the world!</string>

    <string name="slide_2_title">Donate to the world</string>
    <string name="slide_2_desc">Help charities make a positive impact by donating resources!</string>

    <string name="slide_3_title">Worldwide</string>
    <string name="slide_3_desc">Find charities from around the globe!</string>

    <string name="slide_4_title">Community</string>
    <string name="slide_4_desc">Find latest news and discuss them with the local community!</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoib2xmYWthcm91aSIsImEiOiJjanB4YzlhcWMwOWVmNDNsOTYxbGpkeTc3In0.hHfBO_bGoPFkBrSwVIGYXg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_location">Event\'s Location</string>

    <string-array name="array_events">

        <item>Bake sale</item>

        <item>Marathon</item>

        <item>Music festival</item>

        <item>Art exihibit</item>

        <item>Gala</item>

        <item>Auction</item>

        <item>Organised walk</item>

        <item>Fashion show</item>

        <item>Doggy day out</item>

        <item>Garage sale</item>

        <item>Street art</item>

        <item>Fundraising braclets</item>

        <item>Money collecting</item>


    </string-array>
    <string name="title_activity_add_event_location">Map</string>

    <string name="longtext">Soon Lara spotted other landmarks—an outcropping of
    e that all the time, conjuring images of giants and monsters in the landscape. He could perceive the spirits, called numina, that dwelled in rocks and trees. Sometimes he could speak to them and hear what they had to say. The river was his oldest friend and told him where the fishing would be best. From whispers in the wind he could foretell the next day’s weather. Because of such skills, Larth was the leader of the group.</string>
    <string name="title_activity_locate_charity">Map</string>


</resources>
