<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_donations"
                android:icon="@drawable/ic_card_giftcard_black_24dp"
                android:title="@string/collab" />
            <item
                android:id="@+id/nav_myevents"
                android:icon="@drawable/ic_events_selected_16dp"
                android:title="@string/myevents" />
            <item
             android:id="@+id/nav_causes"
             android:icon="@drawable/ic_causes_unselected_16dp"
             android:title="@string/causes" />
            <item
             android:id="@+id/nav_settings"
                android:icon="@drawable/ic_unsub"
             android:title="@string/settings" />

        </group>
</menu>